sdvps-homeworks/kubernetes/config/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
      http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
